[package]
name = "test-contract"
version = "0.3.0"
edition = "2018"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
pyth-sdk-solana = { path = "../", version = "0.10.0" }
solana-program = "2.0.3"
bytemuck = { version = "1.16.1", features = ["derive"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "2.0.3"
solana-client = "2.0.3"
solana-sdk = "2.0.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
